--- a/css/rodo.css
+++ b/css/rodo.css
@@ -9,121 +9,108 @@
     --color-six: #e8bcb9;
 }
 
-.prueba .column{
-    border: solid black;
-}
-
-.nosotros {  
+.contenedora_carousel {
     display: flex;
-    padding: 2%;
-
-}
-
-
-.nosotros-texto {
-    font-family: "Montserrat", sans-serif;
-    margin: 1%;
-    
-
-}
-
-
-.carousel {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 1%;
+    margin: 0;
+    background-color: var(--color-four);
+}
+.carousel {
     position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-
+    width: 1400px;
     
 }
-
-.carousel-inner {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.carousel-item {
-    min-width: 100%;
-    transition: opacity 1s ease-in-out;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 10px;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
+.carousel-icons {
     display: flex;
     justify-content: space-between;
-    transform: translateY(-50%);
+    margin: 20px;
+    background-color: var(--color-six);
+   
+    
 }
-
-.carousel-controls button {
-    background: none;
-    border: none;
-    font-size: 3rem;
-    color: white;
-    cursor: pointer;
-    padding: 0 10px;
-    transition: color 0.3s;
-}
-
-.carousel-controls button:hover {
-    color: #cccccc;
-}
-
-.boton-conocemas {
+.carousel-icons div {
+    background-color: var(--color-six);
     font-family: "Montserrat", sans-serif;
-    font-size: 12px;
-    background-color: var(--color-four);
+    color: black;
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+    width: 200px;
+    height: 50px;
+    border-radius: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
-
-.boton-conocemas:hover {
+.carousel-icons div:hover {
     background-color: var(--color-five);
 }
-
-.objetivo{
+.card {
+    display: none;
+    position: relative;
+    margin-bottom: 50px;
+    top: 20px;
+    left: 0;
     font-family: "Montserrat", sans-serif;
-    Display: flex;
-    gap: 5%;
-    padding: 2%;
+    color: black;
+    background-color: rgba(252, 232, 197, 0.858);
+    border-radius: 10px;
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+    padding: 20px;
+}
+.card-pic{
+    display: flex;
+    justify-content: center;
 }
 
-.meta {
+.card.active {
+    display: block;
+}
+
+.card h4 {
+    background-color: var(--color-six);
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+    border-radius: 20px;
+    padding: 8px;
     font-family: "Montserrat", sans-serif;
-    Display: flex;
-    gap: 10%;
-    padding: 2%;
+    font-size: 20px;   
 }
-    
-.linea-divisoria {
-    width: 100%;
-    height: 4px; /* Puedes ajustar el grosor de la línea aquí */
-    background-color: var(--color-four);
-    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); /* Ajusta el tamaño y la opacidad de la sombra */
-    
+.nuestros_valores {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
-/* Larger than mobile screen */
-@media (min-width: 40.0rem) { 
-
+.word {
+    background-color: var(--color-six);
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+    border-radius: 20px;
+    padding: 8px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
 }
 
-/* Larger than tablet screen */
-@media (min-width: 80.0rem) { 
+#integridad { animation-delay: 0s; }
+#diversidad { animation-delay: 1s; }
+#vinculos{ animation-delay: 2s; }
+#emprendedor{ animation-delay: 3s; }
+#resultados { animation-delay: 4s; }
+#compromiso{ animation-delay: 5s; }
+#innovacion { animation-delay: 6s; }
 
-}
 
-/* Larger than desktop screen */
-@media (min-width: 120.0rem) { 
-   
+@keyframes fadeIn {
+    to {
+        opacity: 10;
+        transform: translateY(0);
+    }
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
 }
-    
 
